codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 169
expression: terminal.backend()
---
"                                                                                "
"• Working (0s • esc to interrupt) · 1 background terminal running · /ps to view…"
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
