codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_empty_then_non_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 821
expression: combined
---
• Waited for background terminal · just fix

↳ Interacted with background terminal · just fix
  └ ls
