codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_non_empty_then_empty_active.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 847
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
