codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_non_empty_then_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 870
expression: combined
---
↳ Interacted with background terminal · just fix
  └ pwd

• Waited for background terminal · just fix
