codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_unknown_end_with_active_exploring_cell.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 591
expression: snapshot
---
History:
• Ran echo repro-marker
  └ repro-marker

Active:
• Exploring
  └ Read null
