codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__exec_and_running_turn__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_and_running_turn.rs
assertion_line: 719
expression: combined
---
• Waited for background terminal · cargo test -p codex-core

• Streaming response.
